--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -3,21 +3,38 @@
     <h3>
       Product List
       <div class="float-end">
-        <button id="btn_add_product" (click)="clickAddProductButton($event)" type="button" data-bs-toggle="modal"
-          data-bs-target="#addProductModal" class="btn btn-primary">
+        <button
+          id="btn_add_product"
+          (click)="clickAddProductButton($event)"
+          type="button"
+          data-bs-toggle="modal"
+          data-bs-target="#addProductModal"
+          class="btn btn-primary"
+        >
           Add Product <i class="fa fa-plus-square" aria-hidden="true"></i>
         </button>
       </div>
     </h3>
   </div>
   <div class="card-body px-5">
-    <app-my-table [columnHeadingArray]="productsHeadings" [gridData]="productsList" (editCallback)="edit($event)"
-      (confirmDeleteCallback)="confirmDelete($event)" [editModal]="editProductModal"
-      [deleteModal]="deleteProductModal"></app-my-table>
+    <app-my-table
+      [columnHeadingArray]="productsHeadings"
+      [gridData]="productsList"
+      (editCallback)="edit($event)"
+      (confirmDeleteCallback)="confirmDelete($event)"
+      [editModal]="editProductModal"
+      [deleteModal]="deleteProductModal"
+    ></app-my-table>
   </div>
 </div>
 <!-- Add product Modal -->
-<div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="addProductModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
@@ -26,11 +43,21 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="product-name">Product Name</label>
-          <input type="text" id="product-name" class="form-control" placeholder="Enter Product Name" />
+          <input
+            type="text"
+            id="product-name"
+            class="form-control"
+            placeholder="Enter Product Name"
+          />
         </div>
         <div class="form-group">
           <label for="product-price">Product Price</label>
-          <input type="text" id="product-price" class="form-control" placeholder="Enter Product Price" />
+          <input
+            type="text"
+            id="product-price"
+            class="form-control"
+            placeholder="Enter Product Price"
+          />
         </div>
         <div class="form-group">
           <label for="product-category">Product Category</label>
@@ -40,23 +67,64 @@
         </div>
         <div class="form-group">
           <label for="product-quantity">Product Quantity</label>
-          <input type="text" id="product-quantity" class="form-control" placeholder="Enter Product Quantity" />
+          <input
+            type="text"
+            id="product-quantity"
+            class="form-control"
+            placeholder="Enter Product Quantity"
+          />
         </div>
         <div class="form-group">
           <label for="product-expiry">Expiry Date</label>
           <input type="date" id="product-expiry" class="form-control" />
         </div>
         <div class="form-group">
-          <label for="product-location">Location</label>
-          <input type="text" id="product-location" class="form-control" placeholder="Enter Location" />
+          <label for="product-location">
+            <input
+              type="checkbox"
+              class="me-1"
+              [(ngModel)]="addLocationCheckBoxValue"
+            />
+            {{
+              addLocationCheckBoxValue ? "Latitude and Longitude" : "Location"
+            }}
+          </label>
+          <div class="input-group mt-1">
+            <input
+              type="text"
+              id="product-location"
+              class="form-control"
+              placeholder="Enter Location"
+              [hidden]="addLocationCheckBoxValue"
+            />
+            <input
+              type="text"
+              id="product-location-latitude"
+              class="form-control me-2"
+              placeholder="Enter Latitude"
+              [hidden]="!addLocationCheckBoxValue"
+            />
+            <input
+              type="text"
+              id="product-location-longitude"
+              class="form-control ms-2"
+              placeholder="Enter Longitude"
+              [hidden]="!addLocationCheckBoxValue"
+            />
+          </div>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
           Cancel
         </button>
-        <button type="button" id="btn_save_product" data-bs-dismiss="modal" class="btn btn-primary"
-          (click)="addProduct($event)">
+        <button
+          type="button"
+          id="btn_save_product"
+          data-bs-dismiss="modal"
+          class="btn btn-primary"
+          (click)="addProduct($event)"
+        >
           Save Product
         </button>
       </div>
@@ -64,7 +132,13 @@
   </div>
 </div>
 <!-- Edit product Modal -->
-<div class="modal fade" id="editProductModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="editProductModal1"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
@@ -73,11 +147,21 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="edit-product-name">Product Name</label>
-          <input type="text" id="edit-product-name" class="form-control" placeholder="Enter Product Name" />
+          <input
+            type="text"
+            id="edit-product-name"
+            class="form-control"
+            placeholder="Enter Product Name"
+          />
         </div>
         <div class="form-group">
           <label for="edit-product-price">Product Price</label>
-          <input type="text" id="edit-product-price" class="form-control" placeholder="Enter Product Price" />
+          <input
+            type="text"
+            id="edit-product-price"
+            class="form-control"
+            placeholder="Enter Product Price"
+          />
         </div>
         <div class="form-group">
           <label for="edit-product-category">Product Category</label>
@@ -87,23 +171,72 @@
         </div>
         <div class="form-group">
           <label for="edit-product-quantity">Product Quantity</label>
-          <input type="text" id="edit-product-quantity" class="form-control" placeholder="Enter Product Quantity" />
+          <input
+            type="text"
+            id="edit-product-quantity"
+            class="form-control"
+            placeholder="Enter Product Quantity"
+          />
         </div>
         <div class="form-group">
           <label for="edit-product-expiry">Expiry Date</label>
           <input type="date" class="form-control" id="edit-product-expiry" />
         </div>
         <div class="form-group">
-          <label for="edit-product-location">Location</label>
-          <input type="text" id="edit-product-location" class="form-control" placeholder="Enter Location" />
+          <div class="row">
+            <div class="col-6">
+              <label for="product-location">
+                {{
+                  addLocationCheckBoxValue
+                    ? "Latitude and Longitude"
+                    : "Location"
+                }}
+              </label>
+            </div>
+            <div class="col-6 float-end text-end">
+              <input
+                type="checkbox"
+                class="me-1"
+                [(ngModel)]="editLocationCheckBoxValue"
+              />Toggle
+            </div>
+          </div>
+          <div class="input-group mt-1">
+            <input
+              type="text"
+              id="edit-product-location"
+              class="form-control"
+              placeholder="Enter Location"
+              *ngIf="!editLocationCheckBoxValue"
+            />
+            <input
+              type="text"
+              id="edit-product-location-latitude"
+              class="form-control me-2"
+              placeholder="Enter Latitude"
+              *ngIf="editLocationCheckBoxValue"
+            />
+            <input
+              type="text"
+              id="edit-product-location-longitude"
+              class="form-control ms-2"
+              placeholder="Enter Longitude"
+              *ngIf="editLocationCheckBoxValue"
+            />
+          </div>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
           Cancel
         </button>
-        <button type="button" data-bs-dismiss="modal" (click)="update($event)" id="btn_update_product"
-          class="btn btn-success">
+        <button
+          type="button"
+          data-bs-dismiss="modal"
+          (click)="update($event)"
+          id="btn_update_product"
+          class="btn btn-success"
+        >
           Update Product
         </button>
       </div>
@@ -111,19 +244,33 @@
   </div>
 </div>
 <!--Delete Modal-->
-<div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  id="deleteProductModal"
+  tabindex="-1"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Delete Product</h5>
-
       </div>
       <div class="modal-body">
         Are you sure you want to delete <span id="delete-product-name"></span>?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" (click)="delete($event)">Delete</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cancel
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          data-bs-dismiss="modal"
+          (click)="delete($event)"
+        >
+          Delete
+        </button>
       </div>
     </div>
   </div>
