--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -76,7 +76,12 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+          <button
+            type="button"
+            (click)="cancelButtonClick($event)"
+            class="btn btn-danger"
+            data-bs-dismiss="modal"
+          >
             Cancel
           </button>
           <button
@@ -110,32 +115,64 @@
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Category</h1>
       </div>
-      <div class="modal-body">
-        <div class="form-group">
-          <label for="edit-category-name">Category Name</label>
-          <input
-            type="text"
-            id="edit-category-name"
-            value=""
-            class="form-control"
-            placeholder="Enter Category Name"
-          />
+      <form
+        [formGroup]="updateCategoryForm"
+        (ngSubmit)="onSubmitUpdateCategoryForm()"
+      >
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="edit-category-name">Category Name</label>
+            <input
+              formControlName="editCategoryName"
+              type="text"
+              id="edit-category-name"
+              [ngClass]="{
+                'is-invalid':
+                  updateCategoryFormSubmitted &&
+                  updateCategoryForm.controls['editCategoryName'].errors
+              }"
+              value=""
+              class="form-control"
+              placeholder="Enter Category Name"
+            />
+            <div
+              class="text-danger"
+              *ngIf="
+                updateCategoryFormSubmitted &&
+                updateCategoryForm.controls['editCategoryName'].errors
+              "
+            >
+              <div
+                *ngIf="
+                  updateCategoryFormSubmitted &&
+                  updateCategoryForm.controls['editCategoryName'].errors[
+                    'required'
+                  ]
+                "
+              >
+                Category Name is required!
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-          Cancel
-        </button>
-        <button
-          type="button"
-          (click)="update($event)"
-          id="btn_update_category"
-          data-bs-dismiss="modal"
-          class="btn btn-success"
-        >
-          Update Category
-        </button>
-      </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+            Cancel
+          </button>
+          <button
+            type="submit"
+            id="btn_update_category"
+            [attr.data-bs-dismiss]="
+              !updateCategoryForm.controls['editCategoryName'].errors
+                ? 'modal'
+                : ''
+            "
+            class="btn btn-success"
+          >
+            Update Category
+          </button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
